# cmake_learn

./: readme.txt
01_install_cmake/: readme.md
02_running_cmake/: readme.md
02_running_cmake/test_folder/: CMakeLists.txt
03_hello_world_executable/: readme.md
04_making_library/test_folder/: CMakeLists.txt  hello.cpp  hello.hpp  main.cpp
05_cmake_in_VS_code/: CMakeLists.txt  readme.md
05_cmake_in_VS_code/test_folder/: CMakeLists.txt  main.cpp
06_Subdirectories_and_target_interface_properies/: readme.md
06_Subdirectories_and_target_interface_properies/test_folder/: CMakeLists.txt
06_Subdirectories_and_target_interface_properies/test_folder/say_hello/: CMakeLists.txt
06_Subdirectories_and_target_interface_properies/test_folder/say_hello/src/say_hello/: hello.cpp
07_scripting_basic/: readme.md
07_scripting_basic/test_folder/: CMakeLists.txt
08_Control_Flow_and_Auto-dereferencing/: readme.md
08_Control_Flow_and_Auto-dereferencing/test_folder/: CMakeLists.txt
09_Functions_Scopes_Arguments_List/: readme.md
09_Functions_Scopes_Arguments_List/test_folder/: CMakeLists.txt
